...
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_spacing"
        android:contentDescription="@string/thumbnail"
        android:src="@drawable/thumb_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/step_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step_description"
        android:layout_width="0dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1. Prep the cookie crust." />

    <View
        android:id="@+id/selection_mark"
        android:layout_width="@dimen/app_spacing_tiny"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
