...
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brownies" />

        <ImageView
            android:id="@+id/expand_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/ic_collapsed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipe_ingredients"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_spacing"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
...
